--- a/.eslintrc
+++ b/.eslintrc
@@ -2,5 +2,8 @@
   "env": {
     "node": true
   },
-  "extends": "airbnb-base"
+  "extends": "airbnb-base",
+  "rules": {
+    "linebreak-style": ["error", "windows"]
+  }
 }
