--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
   },
   "scripts": {
     "lint": "",
-    "test": ""
+    "test": "jest",
+    "test/coverage": "jest --coverage"
   },
   "dependencies": {
     "discord.js": "^11.1.0",
@@ -31,7 +32,8 @@
   "devDependencies": {
     "eslint": "^4.5.0",
     "eslint-config-airbnb-base": "^11.3.2",
-    "eslint-plugin-import": "^2.7.0"
+    "eslint-plugin-import": "^2.7.0",
+    "jest": "^21.1.0"
   },
   "engines": {
     "node": ">=8.0.0"
