--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@south-paw/discord-music-bot",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "A self-hosted Node.js music bot for Discord servers.",
   "keywords": [],
   "homepage": "https://github.com/South-Paw/discord-music-bot",
@@ -25,9 +25,11 @@
     "test/coverage": "jest --coverage"
   },
   "dependencies": {
-    "discord.js": "^11.1.0",
+    "discord.js": "^11.2.1",
+    "ffmpeg-binaries": "^3.2.2-3",
     "node-opus": "^0.2.6",
-    "string-format": "^0.5.0"
+    "string-format": "^0.5.0",
+    "url-parse": "^1.1.9"
   },
   "devDependencies": {
     "eslint": "^4.5.0",
