--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "ytdl-core": "^0.18.1"
   },
   "devDependencies": {
+    "coveralls": "^3.0.0",
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
