Begin work on a rewrite of the bot's base using ES6 features.
The aim here is to make it easier to maintain and extend going forward.

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,15 @@
+# dependencies
 node_modules
-npm-debug.log*
-/coverage
+
+# generated folders
+coverage
+
+# all log files
+*.log*
+
+# ignore editor generated files
+.vscode
+.idea
+
+# OS generated files
+**/.DS_Store
