--- a/package.json
+++ b/package.json
@@ -34,19 +34,20 @@
     "test/coverage": "jest --coverage"
   },
   "dependencies": {
-    "discord.js": "^11.3.0",
+    "discord.js": "^11.3.2",
+    "eslint-plugin-jest": "^21.15.0",
     "ffmpeg-binaries": "^3.2.2-3",
     "node-opus": "^0.2.7",
-    "string-format": "^0.5.0",
+    "string-format": "^1.0.0",
     "url-parse": "^1.2.0",
     "ytdl-core": "^0.20.2"
   },
   "devDependencies": {
     "coveralls": "^3.0.0",
-    "eslint": "^4.18.1",
+    "eslint": "^4.19.1",
     "eslint-config-airbnb-base": "^12.1.0",
-    "eslint-plugin-import": "^2.9.0",
-    "jest": "^22.4.2"
+    "eslint-plugin-import": "^2.10.0",
+    "jest": "^22.4.3"
   },
   "engines": {
     "node": ">=8.0.0"
