--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,6 @@
 language: node_js
 node_js:
   - "8"
-after_script: npm run test/coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
+script:
+  - npm run lint
+  - npm run test/coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js
