--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "discord-musicbot",
   "version": "0.1.5",
-  "description": "A music bot for Discord servers, self-hosted and easy to use.",
+  "description": "A music bot for Discord servers, self-hosted, easy to use and extendable.",
   "keywords": [
     "discord",
     "bot",
@@ -9,11 +9,8 @@
     "musicbot",
     "radio"
   ],
-  "homepage": "https://github.com/South-Paw/discord-music-bot",
-  "bugs": {
-    "url": "https://github.com/South-Paw/discord-music-bot/issues",
-    "email": "hello@southpaw.co.nz"
-  },
+  "homepage": "https://github.com/South-Paw/discord-musicbot",
+  "bugs": "https://github.com/South-Paw/discord-musicbot/issues",
   "license": "GPL-3.0",
   "author": {
     "name": "Alex Gabites",
@@ -21,12 +18,16 @@
     "url": "http://southpaw.co.nz/"
   },
   "files": [
+    "bin",
     "src"
   ],
+  "bin": {
+    "discord-musicbot": "./bin/cli.js"
+  },
   "main": "src/index.js",
   "repository": {
     "type": "git",
-    "url": "https://github.com/South-Paw/discord-music-bot"
+    "url": "https://github.com/South-Paw/discord-musicbot"
   },
   "scripts": {
     "lint": "eslint ./src",
@@ -40,6 +41,7 @@
     "deepmerge": "^2.1.1",
     "discord.js": "^11.3.2",
     "ffmpeg-binaries": "^3.2.2-3",
+    "meow": "^5.0.0",
     "node-opus": "^0.3.0",
     "string-format": "^2.0.0",
     "url-parse": "^1.4.1",
@@ -54,8 +56,7 @@
     "eslint-plugin-jest": "^21.17.0",
     "eslint-plugin-prettier": "^2.6.1",
     "jest": "^23.2.0",
-    "prettier": "^1.13.7",
-    "rimraf": "^2.6.2"
+    "prettier": "^1.13.7"
   },
   "engines": {
     "node": ">=8.0.0"
