--- a/package.json
+++ b/package.json
@@ -40,12 +40,12 @@
     "dateformat": "^3.0.3",
     "deepmerge": "^2.1.1",
     "discord.js": "^11.3.2",
-    "ffmpeg-binaries": "^3.2.2-3",
+    "ffmpeg-binaries": "^4.0.0",
     "meow": "^5.0.0",
     "node-opus": "^0.3.0",
     "string-format": "^2.0.0",
     "url-parse": "^1.4.1",
-    "ytdl-core": "^0.20.4"
+    "ytdl-core": "^0.21.1"
   },
   "devDependencies": {
     "coveralls": "^3.0.2",
