--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@south-paw/discord-music-bot",
-  "version": "0.1.5",
+  "version": "0.0.1",
   "description": "A music bot for Discord servers, self-hosted, easy to use and extendable.",
   "keywords": [
     "discord",
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "lint": "eslint ./src",
-    "prepublishOnly": "npm run lint && npm run test",
+    "prepublishOnly": "yarn lint && yarn test",
     "prettier": "prettier --write \"src/**/*.js\"",
     "test": "jest"
   },
