--- a/.eslintrc
+++ b/.eslintrc
@@ -1,25 +1,10 @@
 {
-  "extends": ["airbnb-base", "prettier"],
-  "env": {
-    "node": true
+  "extends": ["airbnb-typescript/base", "plugin:prettier/recommended", "plugin:jest/recommended"],
+  "parserOptions": {
+    "project": "./tsconfig.json"
   },
-  "plugins": ["jest", "prettier"],
   "rules": {
-    "prettier/prettier": "warn",
-
-    "jest/no-disabled-tests": "warn",
-    "jest/no-focused-tests": "error",
-    "jest/no-identical-title": "error",
-    "jest/valid-expect": "error",
-
-    "arrow-parens": "off"
-  },
-  "overrides": [
-    {
-      "files": ["**/*.test.js"],
-      "env": {
-        "jest": true
-      }
-    }
-  ]
+    "@typescript-eslint/quotes": "off",
+    "import/prefer-default-export": "off"
+  }
 }
