--- a/package.json
+++ b/package.json
@@ -24,36 +24,56 @@
   "bin": {
     "discord-music-bot": "./bin/cli.js"
   },
-  "main": "src/index.js",
+  "main": "dist/index.js",
   "repository": {
     "type": "git",
     "url": "https://github.com/South-Paw/discord-music-bot"
   },
   "scripts": {
-    "lint": "eslint .",
-    "prepublishOnly": "yarn lint && yarn test",
-    "test": "jest"
+    "watch": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn ts:watch\" \"yarn start:watch\"",
+    "watch:debug": "concurrently -k -p \"[{name}]\" -n \"TypeScript,Node\" -c \"cyan.bold,green.bold\" \"yarn ts:watch\" \"yarn start:debug\"",
+    "lint": "tsc --noEmit && eslint \"**/*.{js,ts}\" --quiet",
+    "test": "jest --forceExit --coverage --verbose",
+    "test:watch": "yarn test --watchAll",
+    "build": "yarn clean && yarn ts && yarn lint",
+    "start": "node dist/start.js",
+    "start:watch": "nodemon dist/start.js | pino-pretty -c -l -t",
+    "start:debug": "nodemon --inspect dist/start.js | pino-pretty -c -l -t",
+    "ts": "tsc",
+    "ts:watch": "tsc -w",
+    "clean": "rimraf dist coverage"
   },
   "dependencies": {
-    "dateformat": "^3.0.3",
-    "deepmerge": "^3.0.0",
-    "discord.js": "^11.4.2",
-    "meow": "^5.0.0",
+    "deepmerge": "^4.2.2",
+    "discord.js": "^12.2.0",
+    "meow": "^7.0.1",
+    "pino": "^6.3.1",
     "string-format": "^2.0.0"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "eslint": "^5.11.1",
-    "eslint-config-airbnb-base": "^13.1.0",
-    "eslint-config-prettier": "^3.3.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jest": "^22.1.2",
-    "eslint-plugin-prettier": "^3.0.1",
-    "jest": "^23.6.0",
-    "prettier": "^1.15.3"
+    "@types/jest": "^25.2.1",
+    "@types/node": "^13.13.4",
+    "@types/pino": "^6.0.1",
+    "@types/string-format": "^2.0.0",
+    "@types/ws": "^7.2.4",
+    "@typescript-eslint/eslint-plugin": "^2.30.0",
+    "concurrently": "^5.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb-typescript": "^7.2.1",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-import": "^2.20.2",
+    "eslint-plugin-jest": "^23.8.2",
+    "eslint-plugin-prettier": "^3.1.3",
+    "jest": "^25.5.4",
+    "nodemon": "^2.0.3",
+    "pino-pretty": "^4.0.0",
+    "prettier": "^2.0.5",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^25.4.0",
+    "typescript": "^3.8.3"
   },
   "engines": {
-    "node": ">=10.15.0"
+    "node": ">=13"
   },
   "publishConfig": {
     "access": "public"
