--- a/.eslintrc
+++ b/.eslintrc
@@ -4,7 +4,9 @@
     "project": "./tsconfig.json"
   },
   "rules": {
+    "class-methods-use-this": "off",
     "@typescript-eslint/quotes": "off",
-    "import/prefer-default-export": "off"
+    "import/prefer-default-export": "off",
+    "import/no-cycle": "off"
   }
 }
