--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
   },
   "files": [
     "bin",
-    "src"
+    "dist"
   ],
   "bin": {
     "discord-music-bot": "./bin/cli.js"
@@ -45,32 +45,32 @@
   },
   "dependencies": {
     "deepmerge": "^4.2.2",
-    "discord.js": "^12.2.0",
-    "meow": "^7.0.1",
-    "pino": "^6.3.1",
+    "discord.js": "^12.3.1",
+    "meow": "^7.1.0",
+    "pino": "^6.5.1",
     "string-format": "^2.0.0"
   },
   "devDependencies": {
-    "@types/jest": "^25.2.1",
-    "@types/node": "^13.13.4",
-    "@types/pino": "^6.0.1",
+    "@types/jest": "^26.0.10",
+    "@types/node": "^14.6.1",
+    "@types/pino": "^6.3.0",
     "@types/string-format": "^2.0.0",
-    "@types/ws": "^7.2.4",
-    "@typescript-eslint/eslint-plugin": "^2.30.0",
-    "concurrently": "^5.2.0",
-    "eslint": "^6.8.0",
-    "eslint-config-airbnb-typescript": "^7.2.1",
+    "@types/ws": "^7.2.6",
+    "@typescript-eslint/eslint-plugin": "^3.10.1",
+    "concurrently": "^5.3.0",
+    "eslint": "^7.7.0",
+    "eslint-config-airbnb-typescript": "^9.0.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.20.2",
-    "eslint-plugin-jest": "^23.8.2",
-    "eslint-plugin-prettier": "^3.1.3",
-    "jest": "^25.5.4",
-    "nodemon": "^2.0.3",
-    "pino-pretty": "^4.0.0",
-    "prettier": "^2.0.5",
+    "eslint-plugin-import": "^2.22.0",
+    "eslint-plugin-jest": "^23.20.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "jest": "^26.4.2",
+    "nodemon": "^2.0.4",
+    "pino-pretty": "^4.1.0",
+    "prettier": "^2.1.1",
     "rimraf": "^3.0.2",
-    "ts-jest": "^25.4.0",
-    "typescript": "^3.8.3"
+    "ts-jest": "^26.3.0",
+    "typescript": "^4.0.2"
   },
   "engines": {
     "node": ">=13"
